[project]
name = "hn-python"
description = "My submissions to HN challenges"
authors = [
    {name = "Damien Debin",email = "damien.debin@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "ruff (>=0.13.3,<0.14.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.black]
line-length = 88
target-version = ['py313']

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "B", "ICN", "PT", "SIM", "TC", "PERF", "W", "C4"]
